--- a/htmldemo.hasthemes.com/looki/looki/single-product.html
+++ b/htmldemo.hasthemes.com/looki/looki/single-product.html
@@ -1021,6 +1021,26 @@
                     seitan letterpress
                   </li>
                 </ul>
+
+            <div>
+                            <h2>Ingredients</h2>
+                            <div class="row">
+                              <div class="col-lg-6" style="text-align: center;">
+                            <ul style="display: inline-block;"><br><br><br><br><br>
+                  <li><h2>Lorem1</h2></li><br>
+                  <li><h2>Lorem1</h2></li><br>
+                  <li><h2>Lorem1</h2></li><br>
+                  <li><h2>Lorem1</h2></li><br>
+
+                </ul>
+              </div>
+              <div class="col-lg-6" width="30" style="text-align: center;">
+                <img src="assets/img/percentage.png" style="display: inline-block;">
+              </div>
+            </div>
+                           </div>
+
+
               </div>
             </div>
           </div>
